
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAP_PRIVATE ;
 int O_RDWR ;
 int PROT_NONE ;
 int close (int) ;
 int lrand48 () ;
 int mmap (int ,int ,int ,int ,int,int ) ;
 int open (char*,int ) ;
 int perror (char*) ;

void mmap_pound(int calls) {
 int x, fd;

 fd = open("/dev/zero", O_RDWR);
 if (fd < 0) {
  perror("/dev/zero");
  return;
 }

 for (x = 0; x < calls; x++) {
  mmap(0, lrand48(), PROT_NONE, MAP_PRIVATE, fd, lrand48());
 }

 close(fd);
}
